force-app/main/default/objects/LDRF_Room__c/LDRF_Room__c.object-meta.xml
<CustomObject>
    <label>LDRF Room</label>
    <nameField>
        <label>Room Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LDRF Rooms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>