force-app/main/default/objects/LDRF_Room__c/fields/Aisle_Distance__c.field-meta.xml
<CustomField>
    <fullName>Aisle_Distance__c</fullName>
    <label>Aisle Distance</label>
    <length>40</length>
    <type>Text</type>
</CustomField>