force-app/main/default/objects/LDRF_Room__c/fields/Bay_Length__c.field-meta.xml
<CustomField>
    <fullName>Bay_Length__c</fullName>
    <label>Bay Length</label>
    <length>40</length>
    <type>Text</type>
</CustomField>