force-app/main/default/objects/LDRF_Room__c/fields/Bay_Width__c.field-meta.xml
<CustomField>
    <fullName>Bay_Width__c</fullName>
    <label>Bay Width</label>
    <length>40</length>
    <type>Text</type>
</CustomField>