force-app/main/default/objects/LDRF_Room__c/fields/Controller_Type__c.field-meta.xml
<CustomField>
    <fullName>Controller_Type__c</fullName>
    <label>Controller Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>