force-app/main/default/objects/LDRF_Room__c/fields/Crop_Height_Unit_of_Measure__c.field-meta.xml
<CustomField>
    <fullName>Crop_Height_Unit_of_Measure__c</fullName>
    <label>Crop Height - Unit of Measure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Units</valueSetName>
    </valueSet>
</CustomField>