force-app/main/default/objects/LDRF_Room__c/fields/Desired_Fluence_Fixture__c.field-meta.xml
<CustomField>
    <fullName>Desired_Fluence_Fixture__c</fullName>
    <label>Desired Fluence Fixture</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>