force-app/main/default/objects/LDRF_Room__c/fields/Desired_Mounting_Hardware__c.field-meta.xml
<CustomField>
    <fullName>Desired_Mounting_Hardware__c</fullName>
    <label>Desired Mounting Hardware</label>
    <length>40</length>
    <type>Text</type>
</CustomField>