force-app/main/default/objects/LDRF_Room__c/fields/Desired_PPFD_mol_m2_s__c.field-meta.xml
<CustomField>
    <fullName>Desired_PPFD_mol_m2_s__c</fullName>
    <label>Desired PPFD (µmol/m2/s)</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>