force-app/main/default/objects/LDRF_Room__c/fields/Desired_Spectra__c.field-meta.xml
<CustomField>
    <fullName>Desired_Spectra__c</fullName>
    <label>Desired Spectra</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>