force-app/main/default/objects/LDRF_Room__c/fields/Distance_between_Tiers__c.field-meta.xml
<CustomField>
    <fullName>Distance_between_Tiers__c</fullName>
    <label>Distance between Tiers</label>
    <length>40</length>
    <type>Text</type>
</CustomField>