force-app/main/default/objects/LDRF_Room__c/fields/Distance_from_Floor_to_Calc_Surface__c.field-meta.xml
<CustomField>
    <fullName>Distance_from_Floor_to_Calc_Surface__c</fullName>
    <label>Distance from Floor to Calc. Surface</label>
    <length>40</length>
    <type>Text</type>
</CustomField>