force-app/main/default/objects/LDRF_Room__c/fields/Electrical_Power_Limitation__c.field-meta.xml
<CustomField>
    <fullName>Electrical_Power_Limitation__c</fullName>
    <label>Electrical Power Limitation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>