force-app/main/default/objects/LDRF_Room__c/fields/Electrical_Specifications_Section__c.field-meta.xml
<CustomField>
    <fullName>Electrical_Specifications_Section__c</fullName>
    <label>Electrical Specifications Section</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Electrical_Specifications_Section</valueSetName>
    </valueSet>
</CustomField>