force-app/main/default/objects/LDRF_Room__c/fields/Fluence_Commissioning_Services_Needed__c.field-meta.xml
<CustomField>
    <fullName>Fluence_Commissioning_Services_Needed__c</fullName>
    <label>Fluence Commissioning Services Needed?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_or_No</valueSetName>
    </valueSet>
</CustomField>