force-app/main/default/objects/LDRF_Room__c/fields/Has_AC_Flex__c.field-meta.xml
<CustomField>
    <fullName>Has_AC_Flex__c</fullName>
    <formula>IF(INCLUDES(Electrical_Specifications_Section__c, &apos;AC Flex&apos;),True,False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has AC Flex</label>
    <type>Checkbox</type>
</CustomField>