force-app/main/default/objects/LDRF_Room__c/fields/Has_Wireless_Flex_Dim__c.field-meta.xml
<CustomField>
    <fullName>Has_Wireless_Flex_Dim__c</fullName>
    <formula>IF(INCLUDES(Electrical_Specifications_Section__c, &apos;Wireless Flex Dim&apos;),True,False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Wireless Flex Dim</label>
    <type>Checkbox</type>
</CustomField>