force-app/main/default/objects/LDRF_Room__c/fields/Height_of_1st_Tier_Off_Ground__c.field-meta.xml
<CustomField>
    <fullName>Height_of_1st_Tier_Off_Ground__c</fullName>
    <label>Height of 1st Tier (Off Ground)</label>
    <length>40</length>
    <type>Text</type>
</CustomField>