force-app/main/default/objects/LDRF_Room__c/fields/HPS_Fixture_Model__c.field-meta.xml
<CustomField>
    <fullName>HPS_Fixture_Model__c</fullName>
    <label>HPS Fixture Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>