force-app/main/default/objects/LDRF_Room__c/fields/Length__c.field-meta.xml
<CustomField>
    <fullName>Length__c</fullName>
    <label>Length</label>
    <length>40</length>
    <type>Text</type>
</CustomField>