force-app/main/default/objects/LDRF_Room__c/fields/Lighting_Needs_Section__c.field-meta.xml
<CustomField>
    <fullName>Lighting_Needs_Section__c</fullName>
    <label>Lighting Needs Section</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lighting_Needs_Section</valueSetName>
    </valueSet>
</CustomField>