force-app/main/default/objects/LDRF_Room__c/fields/Line_Voltage__c.field-meta.xml
<CustomField>
    <fullName>Line_Voltage__c</fullName>
    <label>Line Voltage</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>