force-app/main/default/objects/LDRF_Room__c/fields/Mature_Crop_Height__c.field-meta.xml
<CustomField>
    <fullName>Mature_Crop_Height__c</fullName>
    <inlineHelpText>plant + grow medium only (do not include bench)</inlineHelpText>
    <label>Mature Crop Height</label>
    <length>40</length>
    <type>Text</type>
</CustomField>