force-app/main/default/objects/LDRF_Room__c/fields/Mobile_Aisle_Spacing__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Aisle_Spacing__c</fullName>
    <label>Mobile Aisle Spacing</label>
    <length>40</length>
    <type>Text</type>
</CustomField>