force-app/main/default/objects/LDRF_Room__c/fields/No_of_Levels__c.field-meta.xml
<CustomField>
    <fullName>No_of_Levels__c</fullName>
    <label>No. of Levels</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>No_of_Levels</valueSetName>
    </valueSet>
</CustomField>