force-app/main/default/objects/LDRF_Room__c/fields/Number_of_Bays__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Bays__c</fullName>
    <label>Number of Bays</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>