force-app/main/default/objects/LDRF_Room__c/fields/Optic__c.field-meta.xml
<CustomField>
    <fullName>Optic__c</fullName>
    <label>Optic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>