force-app/main/default/objects/LDRF_Room__c/fields/Other_Line_Voltage__c.field-meta.xml
<CustomField>
    <fullName>Other_Line_Voltage__c</fullName>
    <label>Other Line Voltage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>