force-app/main/default/objects/LDRF_Room__c/fields/Panel_Mount_AFF__c.field-meta.xml
<CustomField>
    <fullName>Panel_Mount_AFF__c</fullName>
    <label>Panel Mount (AFF)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>