force-app/main/default/objects/LDRF_Room__c/fields/PPFD_with_HPS__c.field-meta.xml
<CustomField>
    <fullName>PPFD_with_HPS__c</fullName>
    <label>PPFD with HPS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>