force-app/main/default/objects/LDRF_Room__c/fields/PPFD_with_LED_only__c.field-meta.xml
<CustomField>
    <fullName>PPFD_with_LED_only__c</fullName>
    <label>PPFD with LED only</label>
    <length>255</length>
    <type>Text</type>
</CustomField>