force-app/main/default/objects/LDRF_Room__c/fields/Qty_HPS_per_truss__c.field-meta.xml
<CustomField>
    <fullName>Qty_HPS_per_truss__c</fullName>
    <label>Qty HPS per truss</label>
    <length>255</length>
    <type>Text</type>
</CustomField>