force-app/main/default/objects/LDRF_Room__c/fields/Requested_Dimming_Zones__c.field-meta.xml
<CustomField>
    <fullName>Requested_Dimming_Zones__c</fullName>
    <label>Requested Dimming Zones</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>