force-app/main/default/objects/LDRF_Room__c/fields/Resting_Position_Spacing__c.field-meta.xml
<CustomField>
    <fullName>Resting_Position_Spacing__c</fullName>
    <label>Resting Position Spacing</label>
    <length>40</length>
    <type>Text</type>
</CustomField>