force-app/main/default/objects/LDRF_Room__c/fields/Room_Ceiling_Height__c.field-meta.xml
<CustomField>
    <fullName>Room_Ceiling_Height__c</fullName>
    <label>Room Ceiling Height</label>
    <length>40</length>
    <type>Text</type>
</CustomField>