force-app/main/default/objects/LDRF_Room__c/fields/Room_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Room_Configuration__c</fullName>
    <label>Room Configuration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rectangle</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>