force-app/main/default/objects/LDRF_Room__c/fields/Room_Length__c.field-meta.xml
<CustomField>
    <fullName>Room_Length__c</fullName>
    <label>Room Length</label>
    <length>40</length>
    <type>Text</type>
</CustomField>