force-app/main/default/objects/LDRF_Room__c/fields/Room_Width__c.field-meta.xml
<CustomField>
    <fullName>Room_Width__c</fullName>
    <label>Room Width</label>
    <length>40</length>
    <type>Text</type>
</CustomField>