force-app/main/default/objects/LDRF_Room__c/fields/Structure_Unit_of_Measure__c.field-meta.xml
<CustomField>
    <fullName>Structure_Unit_of_Measure__c</fullName>
    <label>Unit of Measure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Units_of_Measure</valueSetName>
    </valueSet>
</CustomField>