force-app/main/default/objects/LDRF_Room__c/fields/System__c.field-meta.xml
<CustomField>
    <fullName>System__c</fullName>
    <defaultValue>&apos;LED&apos;</defaultValue>
    <label>System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>LDRF_System</valueSetName>
    </valueSet>
</CustomField>