force-app/main/default/objects/LDRF_Room__c/fields/Total_amount_of_HPS_fixtures__c.field-meta.xml
<CustomField>
    <fullName>Total_amount_of_HPS_fixtures__c</fullName>
    <label>Total amount of HPS fixtures</label>
    <length>255</length>
    <type>Text</type>
</CustomField>