force-app/main/default/objects/LDRF_Room__c/fields/Truss_Height__c.field-meta.xml
<CustomField>
    <fullName>Truss_Height__c</fullName>
    <label>Truss Height</label>
    <length>40</length>
    <type>Text</type>
</CustomField>