force-app/main/default/objects/LDRF_Room__c/fields/Truss_Spacing__c.field-meta.xml
<CustomField>
    <fullName>Truss_Spacing__c</fullName>
    <label>Truss Spacing</label>
    <length>40</length>
    <type>Text</type>
</CustomField>