force-app/main/default/objects/LDRF_Room__c/fields/Unit_of_Measure_Crop_Height__c.field-meta.xml
<CustomField>
    <fullName>Unit_of_Measure_Crop_Height__c</fullName>
    <label>Crop Height - Unit of Measure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Units_of_Measure</valueSetName>
    </valueSet>
</CustomField>