force-app/main/default/objects/LDRF_Room__c/fields/Unit_of_Measure_Structure__c.field-meta.xml
<CustomField>
    <fullName>Unit_of_Measure_Structure__c</fullName>
    <label>Unit of Measure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Units</valueSetName>
    </valueSet>
</CustomField>