force-app/main/default/objects/LDRF_Room__c/fields/Wattage__c.field-meta.xml
<CustomField>
    <fullName>Wattage__c</fullName>
    <label>Wattage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>