force-app/main/default/objects/LDRF_Room__c/fields/Width__c.field-meta.xml
<CustomField>
    <fullName>Width__c</fullName>
    <label>Width</label>
    <length>40</length>
    <type>Text</type>
</CustomField>