force-app/main/default/objects/LDRF_Room__c/recordTypes/Greenhouse.recordType-meta.xml
<RecordType>
    <fullName>Greenhouse</fullName>
    <active>true</active>
    <label>Greenhouse</label>
</RecordType>