force-app/main/default/objects/LDRF_Room__c/recordTypes/Indoor.recordType-meta.xml
<RecordType>
    <fullName>Indoor</fullName>
    <active>true</active>
    <label>Indoor</label>
</RecordType>