force-app/main/default/objects/LDRF_Room__c/validationRules/Check_Mixed_System_Indoor_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Mixed_System_Indoor_Fields</fullName>
    <active>true</active>
    <errorConditionFormula>IF(
				AND(
								ISPICKVAL(System__c, &apos;Mixed (LED + HPS, etc)&apos;),
								RecordType.Name = &apos;Indoor&apos;,
								ISBLANK(Wattage__c)
				),
				TRUE,
				FALSE
)</errorConditionFormula>
    <errorMessage>Wattage should not be blank when System is Mixed (LED + HPS, etc).</errorMessage>
</ValidationRule>