force-app/main/default/objects/LDRF_Room__c/validationRules/Posiiton_Rolling_Required_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>Posiiton_Rolling_Required_Fields</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
$Setup.Bypass_Configuration__c.LDRF_ROOM_Validation_Rule__c = FALSE,
ISPICKVAL( Position__c , &apos;Rolling&apos;),
OR( ISNULL(  Mobile_Aisle_Spacing__c  ) ,ISBLANK( Mobile_Aisle_Spacing__c ), ISNULL(   Resting_Position_Spacing__c   ) ,ISBLANK( Resting_Position_Spacing__c )) )</errorConditionFormula>
    <errorMessage>Resting Position Spacing and Mobile Aisle Spacing cannot be blank when Position is Rolling.</errorMessage>
</ValidationRule>